api call to feed card,user profile in feed card

--- a/angular.json
+++ b/angular.json
@@ -61,6 +61,10 @@
             },
             "development": {
               "browserTarget": "chitChat:build:development"
+            },
+            "options": {
+              "browserTarget": "chitChat:build",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
